# ntat

./: Cargo.toml  README.md  client_dalek.rs  lib.rs
benches/: my_benchmark.rs
src/: client.rs  client_chac.rs  client_dalek.rs  client_pairing.rs  client_u_prove.rs  lib.rs  main.rs  server.rs  server_chac.rs  server_dalek.rs  server_pairing.rs  server_u_prove.rs  util.rs  util_chac.rs  util_dalek.rs  util_pairing.rs
