[package]
name = "ntat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "0.4" }
ark-ff = { version = "0.4" }
ark-ec = { version = "0.4" }
ark-serialize = { version = "0.4" }
ark-bls12-381 = { version = "0.4", features = [ "curve" ] }
rand = { version = "0.8", features = [ "std", "std_rng" ] }
num-bigint = { version = "0.4" }
ark-crypto-primitives = "0.4.0"
sha256 = "1.1.1"
hex = "0.4.3"
criterion = "0.4"

[[bench]]
name = "my_benchmark"
harness = false